<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.android.launcher3.views.ButtonPreference
        android:key="pref_icon_badging"
        android:persistent="false"
        android:title="@string/icon_badging_title"
        android:widgetLayout="@layout/notification_pref_warning">
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <!-- This extra highlights the "Allow icon badges" field in Notification settings -->
            <extra
                android:name=":settings:fragment_args_key"
                android:value="notification_badging" />
        </intent>
    </com.android.launcher3.views.ButtonPreference>

    <PreferenceScreen
        android:key="pref_smartspace"
        android:persistent="false"
        android:summary="@string/smartspace_preferences_in_settings_desc"
        android:title="@string/smartspace_preferences_in_settings" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_add_icon_to_home"
        android:persistent="true"
        android:summary="@string/auto_add_shortcuts_description"
        android:title="@string/auto_add_shortcuts_label" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_enable_minus_one"
        android:summary="@string/pref_show_google_now_summary"
        android:title="@string/title_show_google_app" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_show_predictions"
        android:summary="@string/summary_app_suggestions"
        android:title="@string/title_app_suggestions" />

    <SwitchPreference
        android:defaultValue="@bool/allow_rotation"
        android:key="pref_allowRotation"
        android:persistent="true"
        android:title="@string/allow_rotation_title" />

    <ListPreference
        android:defaultValue=""
        android:entries="@array/icon_shape_override_paths_names"
        android:entryValues="@array/icon_shape_override_paths_values"
        android:key="pref_override_icon_shape"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/icon_shape_override_label" />

    <com.matteolobello.pixellauncher.CustomIconPreference
        android:defaultValue=""
        android:key="pref_icon_pack"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/pref_icon_pack" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_solid_ui"
        android:persistent="true"
        android:summary="@string/solid_ui_summary"
        android:title="@string/solid_ui_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_legacy_icons_treatment"
        android:persistent="true"
        android:summary="@string/legacy_icons_treatment_summary"
        android:title="@string/legacy_icons_treatment_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_legacy_icons_treatment_background_color"
        android:persistent="true"
        android:summary="@string/pref_legacy_icons_treatment_background_color_summary"
        android:title="@string/pref_legacy_icons_treatment_background_color_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_is_smartspace_disabled"
        android:persistent="true"
        android:summary="@string/is_smartspace_disabled_summary"
        android:title="@string/is_smartspace_disabled_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_status_bar_scrim"
        android:persistent="true"
        android:summary="@string/status_bar_scrim_summary"
        android:title="@string/status_bar_scrim_title" />

    <Preference
        android:key="pref_hide_apps"
        android:summary="@string/hide_apps_summary"
        android:title="@string/hide_apps_title">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.matteolobello.pixellauncher.HideAppsActivity"
            android:targetPackage="com.matteolobello.pixellauncher" />

    </Preference>

    <PreferenceScreen
        android:key="about_screen"
        android:persistent="false"
        android:title="@string/about">

        <Preference
            android:key="about_app_version"
            android:persistent="false"
            android:title="@string/about_app_version" />

        <Preference
            android:key="app_on_github"
            android:persistent="false"
            android:summary="@string/github_repo_summary"
            android:title="@string/github_repo_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_releases_url" />
        </Preference>

        <Preference
            android:key="app_info"
            android:persistent="false"
            android:title="@string/app_info_drop_target_label">
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:com.matteolobello.pixellauncher" />
        </Preference>

    </PreferenceScreen>

</PreferenceScreen>
